--- a/TravelService/TravelService/appsettings.json
+++ b/TravelService/TravelService/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TravelDatabase": "Server=tcp:fptbachcv.database.windows.net,1433;Initial Catalog=travel;Persist Security Info=False;User ID=cvb1994;Password=b@ch1994;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=45;"
+  },
+  "Jwt": {
+    "Key": "sd9sdfbs2srehst5smaasdv5ydfb",
+    "Issuer": "TravelAuthenticationServer",
+    "Audience": "TravelServiceClient",
+    "Subject":  "TravelServiceAccessToken"
+  }
 }
