update db change

--- a/TravelService/TravelService/appsettings.json
+++ b/TravelService/TravelService/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TravelDatabase": "Server=tcp:fptbachcv.database.windows.net,1433;Initial Catalog=travel;Persist Security Info=False;User ID=cvb1994;Password=b@ch1994;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=45;"
+    "TravelDatabase": "Server=tcp:traveldb2.database.windows.net,1433;Initial Catalog=TravelService;Persist Security Info=False;User ID=traveldb;Password=aA123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Key": "sd9sdfbs2srehst5smaasdv5ydfb",
