--- a/TravelService/TravelService/Properties/launchSettings.json
+++ b/TravelService/TravelService/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:35395",
-      "sslPort": 44352
+      "applicationUrl": "http://localhost:49165",
+      "sslPort": 49165
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -31,7 +31,9 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "httpPort": 5000,
+      "sslPort": 5001
     }
   }
 }
